# super

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE-NOTES.md  add_device.sh  build_docker_compose.sh  cloud-docker-compose.yml  docker-compose-kvm.yml  docker-compose-prebuilt.yml  docker-compose-src.yml  docker-compose-test.yml  docker-compose-virt.yml  docker-compose-virtsrc.yml  docker-compose.yml  monitor-services-compose.yml  podman-compose-test.yml  pull_containers.sh  reproducible.env  run-superd.sh  run.sh  run_docker_compose.sh  run_logs.sh  run_monitor.sh  run_prebuilt.sh  services-overview.md  setup.sh  superd.sh  virtual_install.sh  virtual_setup.sh
api/: Dockerfile  Dockerfile.test
api_dns_plugin/: Dockerfile
api_sample_plugin/: Dockerfile  README.md  docker-compose.yml  plugin.json
base/: Dockerfile  build.sh  docker_nftables_setup.sh  docker_nftables_setup_bridge.sh  run_test.sh  setup-sdcard.sh  setup.sh  verify_host_setup.sh
db/: .dockerignore  Dockerfile  README.md
db/code/: Cargo.toml  Makefile  boltapi.go  go.mod  go.sum  sweep.go
db/code/cmd/boltapi/: main.go
db/code/src/: api.rs  config.rs  filter.rs  keys.rs  lib.rs  main.rs  retention.rs  sprbus.rs  store.rs
db/code/tests/: api_test.rs  retention_test.rs  sprbus_test.rs  store_test.rs
db/code/tests/common/: mod.rs
dhcp/: .gitignore  Dockerfile
dns/: .gitignore  Dockerfile  plugin.cfg
docs/: api.md
dyndns/: Dockerfile  docker-compose.yml
experiments/: docker-compose-gvisor.yml
flowgather/: Dockerfile  LICENSE  build.sh
frontend/: .babelrc  (+20 more)
(+926 files in other folders)
