[package]
name = "dbapi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dbapi"
path = "src/main.rs"

[lib]
name = "dbapi"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_path = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time", "signal", "io-util"] }
turso = "0.6.1"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
